# LogDoctor_Installer

installer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
installer/modules/dialogs/: dialogbool.cpp  dialogbool.ui  dialogmsg.cpp  dialogmsg.ui
installer/resources/: resources.qrc
installer/resources/translations/: LogDoctorInstaller_en.qm  LogDoctorInstaller_es.qm  LogDoctorInstaller_fr.qm  LogDoctorInstaller_it.qm
installer/translations/: LogDoctorInstaller_en.ts  LogDoctorInstaller_es.ts  LogDoctorInstaller_fr.ts  LogDoctorInstaller_it.ts
